--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -19,6 +19,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v6.x
 * [E] OssnPhotos -> Fancybox issue and feature request #1858
 * [B] img js ossn_cache cause duplicate requests #1886
 * [E] don't show empty value genders in graphs #1887
+* [B] Wall site crash when mentioning members under certain conditions. #1865
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v5.6
 * [B] prevent creating of new records if setting value is 0 #1815
