--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -20,6 +20,8 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v6.x
 * [B] img js ossn_cache cause duplicate requests #1886
 * [E] don't show empty value genders in graphs #1887
 * [B] Wall site crash when mentioning members under certain conditions. #1865
+* [E] Check user existence before sending message #1883
+* [E] Made it compitable with php 8
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v5.6
 * [B] prevent creating of new records if setting value is 0 #1815
