--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -26,6 +26,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v6.x
 * [E] Avoid ossn_cache to append on already ossn_cache imgs #1891
 * [B] CSSMin didn't minify data:image type svg #1889
 * [E] Remove unused CSS minify code from older OSSN #1892
+* [E] Return xhr object on post and ajaxrequest #1909
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v5.6
 * [B] prevent creating of new records if setting value is 0 #1815
