--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -29,6 +29,9 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v6.x
 * [E] Return xhr object on post and ajaxrequest #1909
 * [B] Group header menu shows multiple more #1888
 * [E] prevent creating groups with undefined membership #1916
+* [E] replaced getObjectsByTypes() by searchObject()
+* [E] removal of obsolete getObjectsByTypes() #1926
+* [E] removal of unused getGroups() #1925
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v5.6
 * [B] prevent creating of new records if setting value is 0 #1815
