--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -32,6 +32,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v6.x
 * [E] replaced getObjectsByTypes() by searchObject()
 * [E] removal of obsolete getObjectsByTypes() #1926
 * [E] removal of unused getGroups() #1925
+* [E] removed dominant comment-box padding #1944
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v5.6
 * [B] prevent creating of new records if setting value is 0 #1815
