--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -36,6 +36,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v6.x
 * [B] OssnPagination::constructUrlArgs() not taking non alphanumeric chars #1974
 * [E] Check the OssnEmbed for videos links issues #1957
 * [E] Add hook for wall, getAllPosts
+* [E] Fixed: jfif photo uploads don't work #1984
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v5.6
 * [B] prevent creating of new records if setting value is 0 #1815
