--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -37,6 +37,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v6.x
 * [E] Check the OssnEmbed for videos links issues #1957
 * [E] Add hook for wall, getAllPosts
 * [E] Fixed: jfif photo uploads don't work #1984
+* [B] PHP rename function doesn't copy folders recursively across separated… #1987
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v5.6
 * [B] prevent creating of new records if setting value is 0 #1815
