--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -46,6 +46,13 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v6.x
 * [B] Unset properties on Group update #1994
 * [E] Allow to use metatags in head #1996
 * [B] Close group post is accessible when not loggedin #1997
+* [E] removal of unused function #2003
+* [B] Notification type like:post:group:wall participants supress #2002
+* [E] Removal of duplicate dLabel ids #2001
+* [E] Fontawesome 5 migration #2000
+* [E] exif_read_data only for jpeg #1999
+* [E] Load ossn notifications only when loggedin #1998
+* [E] Improve the comment add #1990
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v5.6
 * [B] prevent creating of new records if setting value is 0 #1815
