--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -53,6 +53,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v6.x
 * [E] exif_read_data only for jpeg #1999
 * [E] Load ossn notifications only when loggedin #1998
 * [E] Improve the comment add #1990
+* [E] Inefficient table design and query #1864
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v5.6
 * [B] prevent creating of new records if setting value is 0 #1815
