--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,101 @@
+OSSN - OPEN SOURCE SOCIAL NETWORK v5.6
+* [B] prevent creating of new records if setting value is 0 #1815
+* [E] Integrate BanUser inside wall loading #1817
+* [B] OssnChat offset didn't work #1832
+* [E] Callback for cache create #1834
+* [E] allow a message instance in 'messages', 'message:smilify' hook #1829
+* [B] Wrong Notifications because of 'notification:participants' #1822
+* [B] delete annotation should have default parameter id 0 #1819
+* [E] placeholder for input/dropdown #1813
+* [B] issue with account setting profile tabs #1812
+* [E] phpmailer updated to 6.x
+* [B] Get correct fileguid instead of metadata id #1835
+* [E] New lines didn't appears on post/view/.. #1821 (fixed v5.5)
+* [E] Stop user sending message to himself #1836
+* [E] we should get rid of hardcoded styles #1816
+
+OSSN - OPEN SOURCE SOCIAL NETWORK v5.5
+* [B] Messages above 10 are not being deleted #1807
+* [E] Add hook to modify message printing 
+* [B] Messages new lines showing \n #1808
+* [E] Add more support for components in block #1810
+* [B] Revert code added in wall during push #1809
+* [B] Fix utf8 issue with messages german translation #1811
+
+OSSN - OPEN SOURCE SOCIAL NETWORK V5.4
+* [B] Fix bug for new posts not showing.
+* [B] Fix bug with 5.3 upgrade
+* [B] Fix notification loading box not showing.
+* [B] Messages loading taking time.
+* [B] If RealTimeComments is enabled your new comment appears twice.
+* [B] Unable to edit posts.
+
+OSSN - OPEN SOURCE SOCIAL NETWORK V5.3
+* [B] notification, add callback isn't working #1634 (already patched Ossn v5.2 LTS).
+* [E] adaption to enhanced upload function #1641
+* [E] enhanced upload function #1640
+* [E] added error messages for component upload #1642
+* [B] Like deleted callback triggered even if there is no likes #1643
+* [B] No callback triggered for OssnComments::commentsDeleteAll #1644
+* [B] comment is added if the post/entity has been deleted already #1645
+* [E] make the label arg assigned to any label of user/field #1646
+* [B] display ads on pages with offset > 1
+* [B] Dynamic genders select busting the memory #1669
+* [B] PHP 7.4 pseudo_bytes throws warning | migration from bow-fish #1673 (already patched Ossn v5.2 LTS).
+* [B] Entities add results in wrong last_id #1668
+* [E] Stop UserA to send messages to UserB if he blocked UserB #1676
+* [B] wrong 3rd parm in ossn.lib.route line 93 #1649
+* [B] 2 typos fixed in setLogin() #1678
+* [B] suppress warning if site has no non_required fields #1672
+* [E] include locales of themes
+* [B] fix for issue triggered by RemoveGender component #1671
+* [B] added 'message was deleted' #1665
+* [E] prevent installation path from being cached #1664
+* [B] prevent submitting of wallpost when pressing Enter in location input
+* [B] AutoPagination didnt set any URL query to next request #1682
+* [B] prevent crash on deleting comment when Notifications are disabled
+* [B] getting orphan like records from comments when deleting a post #1687
+* [E] Disable OssnChat automatically if OssnMesssges are disabled
+* [E] remove "message" button on profile if OssnMessages are disabled
+* [B] Japanese language files including BOM #1684
+* [E] prevent comment-menu from disappearing if Likes are disabled #1691
+* [B] comments add and list guids mixed with object and entities guids #1693
+* [B] prevent changing of video urls from https to http #1695
+* [B] Wall:getPublicPosts shows wrong posts #1715
+* [E] include bootstrap css with TinyMCE init
+* [E] Allow to edit album name and privacy #1720
+* [E] Group wall post should show group privacy as wall privacy icon #1721
+* [E] Merge profile menu from GreenByGreen theme #1718
+* [E] add option to update relation #1692
+* [B] strangeness of class extending in input modules #1635
+* [E] callbacks for items before being deleted #1630
+* [E] Improve Error Reporting #1722
+* [E] improve OssnThemes->upload() #1694
+* [E] feature request for a more flexible theme handling #1623
+* [E] check availability of CURL before checking mod_rewrite #1723
+* [E] Remove unsupported videos from embed #1724
+* [B] case insensitive emails and username issues during login or signup #1726
+* [B] Delete message button doesn't work if posted same time #1743
+* [E] Default profile picture #1647
+* [E] Add friends automatically when user joined using invitation email #1744
+* [E] Hide a success message when post is added #1745
+* [E] delete 'upload image' wall entries automatically if pic is deleted #1667
+* [B] Removed unnecessary high z-index from love and like emoji
+* [E] Improve Site Settings #1747
+* [E] Allow to override page handler existing pages #1746
+* [E] Add option to change logos from administrator panel #1748
+* [E] Add a callback for Group::sendRequest #1754
+* [E] improve installer to check accessability of directories #1749
+* [B] don't display a tab of a friend who deleted his account
+* [E] allow exact addressing of edited post nodes #1764
+* [E] allow exact addressing of edited comment nodes #1765
+* [E] pass comment guid to embed action #1766
+* [E] make all-comments link work #1772
+* [E] adapt requirements table to components #1779
+* [B] stop like emojis from overlapping topbar #1778
+* [E] adapt requirements table to component requirements table #1780
+* [E] Allow to delete a message entry from specific side #1801
+
 OSSN - OPEN SOURCE SOCIAL NETWORK V5.2 
 * Several fixes for handling of cover images #1488
 * Added general support for dragging images #1489
