[E] Add provided by giphy footer or banner #2049

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -14,6 +14,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v6.2
 * [B] fixed unallowed <div> inside paragraph again #2044
 * [E] load css for video in <span> #2043
 * [E] make video visible in <span> #2042
+* [E] Add provided by giphy footer or banner #2049
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v6.1
 * [B] Undefined array key "HTTP_HOST #2012
