--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -43,6 +43,9 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v6.2
 * [B] jqueryui-datepicker fails on Google translated pages #2036
 * [E] Removal of old upgrade scripts #2085
 * [E] Enhance OssnFile and Include CDN option #2089
+* [E] fixed different 'readonly' colors #2134
+
+Special Thanks to Michael Zülsdorff (aka Zetman) (https://www.opensource-socialnetwork.org/u/zetman) for testing and bug reporting, fixing.
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v6.1
 * [B] Undefined array key "HTTP_HOST #2012
