--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -49,6 +49,8 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v6.2
 * [E] don't list unvalidated members #2144
 * [B] Multiple clicks on same action add member multiple times in group #2147
 * [B] col-xs not anymore with BS5 #2017
+* [E] Remove php5 apache config and update post and upload sizes #2033
+* [E] Stop rewriting .htaccess every time page loads during installation #2091
 
 Special Thanks to Michael Zülsdorff (aka Zetman) (https://www.opensource-socialnetwork.org/u/zetman) for testing and bug reporting, fixing.
 
