--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -51,6 +51,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v6.2
 * [B] col-xs not anymore with BS5 #2017
 * [E] Remove php5 apache config and update post and upload sizes #2033
 * [E] Stop rewriting .htaccess every time page loads during installation #2091
+* [B] Deleting a group should remove group:joinrequest records #2066
 
 Special Thanks to Michael Zülsdorff (aka Zetman) (https://www.opensource-socialnetwork.org/u/zetman) for testing and bug reporting, fixing.
 
