--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -52,6 +52,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v6.2
 * [E] Remove php5 apache config and update post and upload sizes #2033
 * [E] Stop rewriting .htaccess every time page loads during installation #2091
 * [B] Deleting a group should remove group:joinrequest records #2066
+* [E] Enable linkifying of Entity comments #2080
 
 Special Thanks to Michael Zülsdorff (aka Zetman) (https://www.opensource-socialnetwork.org/u/zetman) for testing and bug reporting, fixing.
 
