--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -54,6 +54,9 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v6.2
 * [B] Deleting a group should remove group:joinrequest records #2066
 * [E] Enable linkifying of Entity comments #2080
 * [B] wrong class extending in all input plugins #2146
+* [E] Ossn::File MaxSize() add UploadMaxSize #2148
+* [B] getting orphan notification records of type comments:post:group:wall #2060
+* [E] isModerator (for groups) in comments section also. #2025
 
 Special Thanks to Michael Zülsdorff (aka Zetman) (https://www.opensource-socialnetwork.org/u/zetman) for testing and bug reporting, fixing.
 
