--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -59,6 +59,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v6.2
 * [E] isModerator (for groups) in comments section also. #2025
 * [E] Added OssnJWT class based on firebase/JWT
 * [E] Updated cacert.pem
+* [E] Updated PHP MAILER to 6.6.0
 
 Special Thanks to Michael Zülsdorff (aka Zetman) (https://www.opensource-socialnetwork.org/u/zetman) for testing and bug reporting, fixing.
 
