--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -66,6 +66,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v6.2
 * [T] OssnUser::getFriends() #2149
 * [B] Pagination not responsive #2150
 * [B] btn-sm have no effect #2153
+* [B] missing checkbox-block span style #2145
 
 Special Thanks to Michael Zülsdorff (aka Zetman) (https://www.opensource-socialnetwork.org/u/zetman) for testing and bug reporting, fixing.
 
