--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -67,6 +67,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v6.2
 * [B] Pagination not responsive #2150
 * [B] btn-sm have no effect #2153
 * [B] missing checkbox-block span style #2145
+* [B] Non logged in visitor can view private posts #2158
 
 Special Thanks to Michael Zülsdorff (aka Zetman) (https://www.opensource-socialnetwork.org/u/zetman) for testing and bug reporting, fixing.
 
