--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+OSSN - OPEN SOURCE SOCIAL NETWORK v6.3 
+- [B] deleting profile photo gives error on iconURL() #2166
+
 OSSN - OPEN SOURCE SOCIAL NETWORK v6.2
 * [E] Allow all callables for extend view #2024
 * [E] avoiding unnecessary handling of extra space at comment start #2029
