--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v6.4 LTS
 * [B] Comment object menu not showing comment menu #2168
 * [B] XSS vulnerability in OssnWall #2173
 * [B] Same Friends tag flooding #2175
+* [B] Bug in ossn_get_relationships when setting only 'from' #2170
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v6.3 LTS
 * [B] deleting profile photo gives error on iconURL() #2166
