--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v6.4 LTS
 * [B] Same Friends tag flooding #2175
 * [B] Bug in ossn_get_relationships when setting only 'from' #2170
 * [E] Enhanced, getFriends make sure it returns relation_id in field list #2171 #2149
+* [B] Multiple css js loaded if multiple ossn_load_js(css) #2169
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v6.3 LTS
 * [B] deleting profile photo gives error on iconURL() #2166
