--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,11 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v6.5
 * [B] Installation not throwing mysql errors #2183
 * [B] wrong adjustmment of ossn-like-reactions-panel in mobile view #2189
 * [E] Disable admin to change his own type on user edit page (admin panel) #2182
+* [E] prevent loading language files of disabled components #2192
+* [B] With php 8 return type searchFiles not returing count #2199
+* [B] incompatibilty of Ossn 6.4 wall post storage and display with former Ossn releases #2187
+* [B] Places service has been sunsetted #2184
+* [E] Add a filetype block when user try upload video file into OssnWall #2191
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v6.4 LTS
 * [B] Comment object menu not showing comment menu #2168
