--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -11,6 +11,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v6.5
 * [E] Add a filetype block when user try upload video file into OssnWall #2191
 * [B] Covers and profile photos not showing pagination #2198
 * [E] Upgraded to BS5.2.2 from BS5.2.0-beta1
+* [E] Add plugin for user/output_url #2193
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v6.4 LTS
 * [B] Comment object menu not showing comment menu #2168
