--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v6.5
 * [B] Covers and profile photos not showing pagination #2198
 * [E] Upgraded to BS5.2.2 from BS5.2.0-beta1
 * [E] Add plugin for user/output_url #2193
+* [B] Apache config being rewritten if modified by cpanel #2179
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v6.4 LTS
 * [B] Comment object menu not showing comment menu #2168
