--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -17,6 +17,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v6.5
 * [E] Enhance friends picker because now getFriends searched via OssnUser instance #2202
 * [E] admin_topbar and admin_sidemenu text setting via ossn_register_menu_item #2200
 * [E] Change name fields into max 30 chars each #2203
+* [E] Don't load js if it is not set.
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v6.4 LTS
 * [B] Comment object menu not showing comment menu #2168
