--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -13,6 +13,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK vX.X
 - [E] Improvement in messages and chat,  allow you to upload file and image in message.
 - [E] Chat and Messages UI improved. Messages layout made bigger and remove chat from messages page.
 - [E] typo OssnMail::NotifiyUser #2224
+- [E] Update php version checking to version compare (installation) #2221
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v6.6
 * [E] output/user/url to profile cover , photos, albums wall template #2205
