--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -16,6 +16,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK vX.X
 - [E] Update php version checking to version compare (installation) #2221
 - [B] Image in advertisement stays in cache #2229
 - [E] Add checkmarks in recent messages #2237
+- [E] input/dropdown allow option values to set class, id etc #2239
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v6.6
 * [E] output/user/url to profile cover , photos, albums wall template #2205
