--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -17,6 +17,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK vX.X
 - [B] Image in advertisement stays in cache #2229
 - [E] Add checkmarks in recent messages #2237
 - [E] input/dropdown allow option values to set class, id etc #2239
+- [E] Dynamic properties PHP 8.2 deprecated notice #2238
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v6.6
 * [E] output/user/url to profile cover , photos, albums wall template #2205
