--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -19,6 +19,8 @@ OSSN - OPEN SOURCE SOCIAL NETWORK vX.X
 - [E] input/dropdown allow option values to set class, id etc #2239
 - [E] Dynamic properties PHP 8.2 deprecated notice #2238
 - [E] File sizes error not showing on profile photo/cover upload #2243
+- [E] Unknown offset on OssnFile #2240
+- [E] Users list make btn-sm #2214
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v6.6
 * [E] output/user/url to profile cover , photos, albums wall template #2205
