--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -21,6 +21,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK vX.X
 - [E] File sizes error not showing on profile photo/cover upload #2243
 - [E] Unknown offset on OssnFile #2240
 - [E] Users list make btn-sm #2214
+- [B] OssnChat shows only 10 friends in sidebar #2227
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v6.6
 * [E] output/user/url to profile cover , photos, albums wall template #2205
