--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -24,6 +24,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK vX.X
 - [B] OssnChat shows only 10 friends in sidebar #2227
 - [E] prevent loading language files of disabled components #2192
 - [E] Improve OssnUser method getFriendRequests #2217
+- [E] OssnAds remove link in view #2242
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v6.6
 * [E] output/user/url to profile cover , photos, albums wall template #2205
