--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -26,3 +26,4 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v7.0
 - [E] Improve OssnUser method getFriendRequests #2217
 - [E] OssnAds remove link in view #2242
 - [B] Undefined errors in CLI #2248
+- [E] Make similes box in center of page with some background effect #2250
