--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,31 +1,33 @@
 OSSN - OPEN SOURCE SOCIAL NETWORK v7.0
-- [B] fix allowing to display profile modules with priority < 200 #2211
-- [B] User existence check #2222
-- [E] Add fancybox into core as external lib #2234
-- [E] Unload OssnChat on Messages pages #2236
-- [B] searchMessages viewed option doesn't work #2235
-- [B] OssnUser::getFriends([any wheres]) ignoring actual wheres resulting wrong result #2228
-- [B] Albums gallery thumbs showing wrong URL even it works #2225
-- [E] Update chart js library #2220
-- [E] jQueryUI 1.12.1 CVE-2021-41184 critical RCE vulnerability #2219
-- [E] typo OssnMail::NotifiyUser #2224
-- [E] Where does OssnComponents::bundledComponents() used? #2210
-- [E] Improvement in messages and chat,  allow you to upload file and image in message.
-- [E] Chat and Messages UI improved. Messages layout made bigger and remove chat from messages page.
-- [E] typo OssnMail::NotifiyUser #2224
-- [E] Update php version checking to version compare (installation) #2221
-- [B] Image in advertisement stays in cache #2229
-- [E] Add checkmarks in recent messages #2237
-- [E] input/dropdown allow option values to set class, id etc #2239
-- [E] Dynamic properties PHP 8.2 deprecated notice #2238
-- [E] File sizes error not showing on profile photo/cover upload #2243
-- [E] Unknown offset on OssnFile #2240
-- [E] Users list make btn-sm #2214
-- [B] OssnChat shows only 10 friends in sidebar #2227
-- [E] prevent loading language files of disabled components #2192
-- [E] Improve OssnUser method getFriendRequests #2217
-- [E] OssnAds remove link in view #2242
-- [B] Undefined errors in CLI #2248
-- [E] Make similes box in center of page with some background effect #2250
-- [E] Add notification email name in settings #2251
-- [E] Add a copyrights settings instead of site name #2252
+* [B] fix allowing to display profile modules with priority < 200 #2211
+* [B] User existence check #2222
+* [E] Add fancybox into core as external lib #2234
+* [E] Unload OssnChat on Messages pages #2236
+* [B] searchMessages viewed option doesn't work #2235
+* [B] OssnUser::getFriends([any wheres]) ignoring actual wheres resulting wrong result #2228
+* [B] Albums gallery thumbs showing wrong URL even it works #2225
+* [E] Update chart js library #2220
+* [E] jQueryUI 1.12.1 CVE*2021*41184 critical RCE vulnerability #2219
+* [E] typo OssnMail::NotifiyUser #2224
+* [E] Where does OssnComponents::bundledComponents() used? #2210
+* [E] Improvement in messages and chat,  allow you to upload file and image in message.
+* [E] Chat and Messages UI improved. Messages layout made bigger and remove chat from messages page.
+* [E] typo OssnMail::NotifiyUser #2224
+* [E] Update php version checking to version compare (installation) #2221
+* [B] Image in advertisement stays in cache #2229
+* [E] Add checkmarks in recent messages #2237
+* [E] input/dropdown allow option values to set class, id etc #2239
+* [E] Dynamic properties PHP 8.2 deprecated notice #2238
+* [E] File sizes error not showing on profile photo/cover upload #2243
+* [E] Unknown offset on OssnFile #2240
+* [E] Users list make btn*sm #2214
+* [B] OssnChat shows only 10 friends in sidebar #2227
+* [E] prevent loading language files of disabled components #2192
+* [E] Improve OssnUser method getFriendRequests #2217
+* [E] OssnAds remove link in view #2242
+* [B] Undefined errors in CLI #2248
+* [E] Make similes box in center of page with some background effect #2250
+* [E] Add notification email name in settings #2251
+   - Sometime you don't want to show website name in notification email ,  so this will change sender name in the notification emails.
+* [E] Add a copyrights settings instead of site name #2252
+   - Someone requested that they want to change copyright but not the site name. So this will let to change copyrgiht text only (no url).
