--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -32,3 +32,4 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v7.0
 * [E] Add a copyrights settings instead of site name #2252
    - Someone requested that they want to change copyright but not the site name. So this will let to change copyrgiht text only (no url).
 * [E] cdnStorage component disabled but settings enabled #2255
+* [E] Remove any blank spaces from the username field #2249 thanks to Rafael Amorim (https://github.com/rafaelmamorim)
