--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,10 @@
 OSSN - OPEN SOURCE SOCIAL NEWORK  v7.1
 - [B] Command to replace slash to backslash missing in vendors/jwt/autoload.php #2274
+- [B] ossn_is_from_cli is returning true on non-cli #2262
+- [B] Unaccepted friend appears in getFriends #2265
+- [B] OssnPhotos::getPhoto should not return other file types #2272
+- [B] hide group members and subpages for private groups #2276
+- [B] Tinymce lists and bullets missing from topbar #2267
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v7.0
 * [B] fix allowing to display profile modules with priority < 200 #2211
