--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,6 +7,7 @@ OSSN - OPEN SOURCE SOCIAL NEWORK  v7.1
 - [B] Tinymce lists and bullets missing from topbar #2267
 - [E] OssnNotifications check new one on mark all as read #2266
 - [E] Default search result type confusing #2279
+- [E] improve username invalid message #2273
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v7.0
 * [B] fix allowing to display profile modules with priority < 200 #2211
