--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -9,6 +9,7 @@ OSSN - OPEN SOURCE SOCIAL NEWORK  v7.1
 - [E] Default search result type confusing #2279
 - [E] improve username invalid message #2273
 - [B] Emojis shows entities in trimmed message notification #2257
+- [E] Remove /register page what is it doing? #2270
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v7.0
 * [B] fix allowing to display profile modules with priority < 200 #2211
