--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,8 @@ OSSN - OPEN SOURCE SOCIAL NEWORK  v7.1
 - [E] Remove /register page what is it doing? #2270
 - [E] Add max-height in .ossn-wall-item .post-contents img #2259
 - [E] Don't open the last message in messages/all #2283
+- [E] Allow attachment of image in message without text #2268
+
 
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v7.0
