--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -20,6 +20,7 @@ OSSN - OPEN SOURCE SOCIAL NEWORK  v7.1
 - [B] Message typing UI bug for OSSN chat #2288
 - [E] Show only online members in Chat #2287
 - [B] OssnChat showing only 10 users #2263
+- [E] Add option to trigger manually messagebox/overlay box #2277
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v7.0
 * [B] fix allowing to display profile modules with priority < 200 #2211
