--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -21,6 +21,8 @@ OSSN - OPEN SOURCE SOCIAL NEWORK  v7.1
 - [E] Show only online members in Chat #2287
 - [B] OssnChat showing only 10 users #2263
 - [E] Add option to trigger manually messagebox/overlay box #2277
+- [E] Merge Hungarian langauge #2289
+
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v7.0
 * [B] fix allowing to display profile modules with priority < 200 #2211
