--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -22,7 +22,7 @@ OSSN - OPEN SOURCE SOCIAL NEWORK  v7.1
 - [B] OssnChat showing only 10 users #2263
 - [E] Add option to trigger manually messagebox/overlay box #2277
 - [E] Merge Hungarian langauge #2289
-
+- [E] phpmailer update #2292
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v7.0
 * [B] fix allowing to display profile modules with priority < 200 #2211
