--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -23,6 +23,7 @@ OSSN - OPEN SOURCE SOCIAL NEWORK  v7.1
 - [E] Add option to trigger manually messagebox/overlay box #2277
 - [E] Merge Hungarian langauge #2289
 - [E] phpmailer update #2292
+- [E] new zip mime type #2293
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v7.0
 * [B] fix allowing to display profile modules with priority < 200 #2211
