--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -25,6 +25,7 @@ OSSN - OPEN SOURCE SOCIAL NEWORK  v7.1
 - [E] phpmailer update #2292
 - [E] new zip mime type #2293
 - [E] Improve installation script #2294
+- [E] Add style to checkboxes #2291
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v7.0
 * [B] fix allowing to display profile modules with priority < 200 #2211
