--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,6 @@
 OSSN - OPEN SOURCE SOCIAL NEWORK  v7.2
 - [B] usage of unavailable font-family in Goblue #2301
+- [B] non-UTF8 chars in 3 language files of Goblue #2298
 
 OSSN - OPEN SOURCE SOCIAL NEWORK  v7.1
 - [B] Command to replace slash to backslash missing in vendors/jwt/autoload.php #2274
