--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,8 @@ OSSN - OPEN SOURCE SOCIAL NEWORK  v7.2
 - [B] usage of unavailable font-family in Goblue #2301
 - [B] missing declaration of $members in group profile #2307
 - [E] Changing logo should add timestamp to invalidate cache #2302
+- [B] Theme language strings not cached #2299
+- [E] callback for theme before and after load #2299
 
 OSSN - OPEN SOURCE SOCIAL NEWORK  v7.1
 - [B] Command to replace slash to backslash missing in vendors/jwt/autoload.php #2274
