--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -13,6 +13,7 @@ OSSN - OPEN SOURCE SOCIAL NEWORK  v7.2
 - [E] Changing logo should add timestamp to invalidate cache #2302
 - [B] Theme language strings not cached #2299
 - [E] callback for theme before and after load #2299
+- [E] allow to modify default username length using hook #2304
 
 OSSN - OPEN SOURCE SOCIAL NEWORK  v7.1
 - [B] Command to replace slash to backslash missing in vendors/jwt/autoload.php #2274
