--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v7.3
 - [E] Hide message view on xs devices on message view page #2323
 - [B] countByYears result in admin panel showing wrong years + limit query to 2 years #2320
 - [B] Show chat bottom on large screens only lg (not md) #2321
+- [E] Show current search query inside search box on search page #2328
 
 
 OSSN - OPEN SOURCE SOCIAL NEWORK  v7.2
