--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,8 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v7.3
 - [B] Show chat bottom on large screens only lg (not md) #2321
 - [E] Show current search query inside search box on search page #2328
 - [B] Goblue 6.4 checkbox (checked) display corrupted #2330
+- [B] Replace col-md with lg #2322
+
 
 
 OSSN - OPEN SOURCE SOCIAL NEWORK  v7.2
