--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -15,7 +15,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v7.3
 - [B] Replace col-md with lg #2322
 - [E] .ossn-box-loading not in center #2342
 - [E] Configure able autocheck OssnNotifications #2329
-- [E] Configure able autocheck OssnNotifications #2329
+- [E] Allow selection on multiple users on the unvalidated list current page #2319
 
 
 OSSN - OPEN SOURCE SOCIAL NEWORK  v7.2
