--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -17,6 +17,9 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v7.3
 - [E] Configure able autocheck OssnNotifications #2329
 - [E] Allow selection on multiple users on the unvalidated list current page #2319
 - [E] Session locking issue #2343
+- [B] When fixing #2305 we missed groups cover error handling #2346
+- [E] Revert of old #1436 as its never used anywhere #2345
+- [E] DynamicCaching usage #2335
 
 
 OSSN - OPEN SOURCE SOCIAL NEWORK  v7.2
