--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -20,6 +20,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v7.3
 - [B] When fixing #2305 we missed groups cover error handling #2346
 - [E] Revert of old #1436 as its never used anywhere #2345
 - [E] DynamicCaching usage #2335
+- [E] checkboxes check on label click #2348
 
 
 OSSN - OPEN SOURCE SOCIAL NEWORK  v7.2
