--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -21,6 +21,10 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v7.3
 - [E] Revert of old #1436 as its never used anywhere #2345
 - [E] DynamicCaching usage #2335
 - [E] checkboxes check on label click #2348
+- [E] Fix the distorted 404 error page #2353
+- [B] Disorted frontpage icons #2352
+- [B] Truncated placeholder text in friends tagger #2351
+- [B] Transparency change of emoji overlay after editing posts/comments #2350
 
 
 OSSN - OPEN SOURCE SOCIAL NEWORK  v7.2
