--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -28,7 +28,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v7.3
 - [E] Improvement to checkboxes #2357
 - [E] Mark radio boxes required if not checked #2359
 - [E] OssnBlock allows blocking of moderators #2358
-
+- [E] Allow rumble embed URL support #2362
 
 
 OSSN - OPEN SOURCE SOCIAL NEWORK  v7.2
