--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,6 +3,7 @@ OSSN - OPEN SOURCE SOCIAL NETWORK v7.6
 - [B] Reset logo if no logo set before causing error #2368
 - [E] Update phpmailer
 - [B] When deleting album Undefined property #2395
+- [B] Admins can not view "friends only" posts if not friend with user #2403
 
 OSSN - OPEN SOURCE SOCIAL NETWORK v7.5
 - [B] Editing user giving error, the email already existing (admin panel) #2364
